<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_form"
    android:padding="24dp"
    tools:context=".beer.ui.ShowBeerActivity">

    <!-- Título -->
    <TextView
        android:id="@+id/idTitleForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/FormBeer_Title_CREATE"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold" />

    <!-- Subtítulo -->
    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idTitleForm"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/FormBeer_Subtitle_UPDATE"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp" />

    <!-- ScrollView solo para los campos -->
    <ScrollView
        android:id="@+id/scrollViewFields"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/buttonAccept"
        android:layout_below="@id/tvSubtitle"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:fillViewport="false"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">


            <EditText
                android:id="@+id/inputBrand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background_purple"
                android:drawableStart="@drawable/local_drink"
                android:drawablePadding="16dp"
                android:hint="@string/FormBeer_Field1"
                android:inputType="text"
                android:maxLines="1"
                android:padding="18dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />


            <EditText
                android:id="@+id/inputTypew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_background_purple"
                android:drawableStart="@drawable/materialsymbolslightformatlistbulleted__1_"
                android:drawablePadding="16dp"
                android:hint="@string/FormBeer_Field2"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="18dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <!-- Campo 3: Nombre completo -->
            <EditText
                android:id="@+id/inputABV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_background_purple"
                android:drawableStart="@drawable/percent"
                android:drawablePadding="16dp"
                android:hint="@string/FormBeer_Field3"
                android:inputType="number"
                android:maxLines="1"
                android:padding="18dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <!-- Campo 4: Teléfono -->
            <EditText
                android:id="@+id/inputIBU"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_background_purple"
                android:drawableStart="@drawable/wheat_harvest_svgrepo_com"
                android:drawablePadding="16dp"
                android:hint="@string/FormBeer_Field4"
                android:inputType="number"
                android:maxLines="1"
                android:padding="18dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/inputProvider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_background_purple"
                android:drawableStart="@drawable/store"
                android:drawablePadding="16dp"
                android:hint="@string/FormBeer_Field5"
                android:inputType="textPostalAddress"
                android:maxLines="1"
                android:padding="18dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />


            <EditText
                android:id="@+id/inputPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_background_purple"
                android:drawableStart="@drawable/attach_money"
                android:drawablePadding="16dp"
                android:hint="@string/FormBeer_Field6"
                android:inputType="number"
                android:maxLines="1"
                android:padding="18dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/inputQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_background_purple"
                android:drawableStart="@drawable/warehouse_inventory_stock_merchandise_svgrepo_com"
                android:drawablePadding="16dp"
                android:hint="@string/FormBeer_Field7"
                android:inputType="number"
                android:maxLines="1"
                android:padding="18dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </LinearLayout>
    </ScrollView>

    <!-- Botón Registrarse -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonAccept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttonBack"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/Soft_golden"
        android:padding="14dp"
        android:text="@string/FormUser_Button_CREATE"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <!-- Botón Volver -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/Soft_golden"
        android:padding="14dp"
        android:text="@string/ButtonBack"
        android:textColor="@color/black"
        android:textSize="16sp" />

</RelativeLayout>