<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewUser"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    app:cardBackgroundColor="#D4A017"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/idimagenBeer"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="16dp"
            android:src="@drawable/shopping_cart" />

        <TextView
            android:id="@+id/idCustomer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/idimagenBeer"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/cardSale_CustomerName"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/idSales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/idCustomer"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/idimagenBeer"
            android:text="@string/cardBeer_SerialNumber"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/idSales"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@id/idimagenBeer"
            android:backgroundTint="@color/white"
            android:text="@string/cardUser_Update"
            android:textColor="#8A1E70"
            app:cornerRadius="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/idSales"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/buttonUpdate"
            android:backgroundTint="@color/white"
            android:text="@string/cardBeer_Delete"
            android:textColor="#8A1E70"
            app:cornerRadius="8dp" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>